--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -32,8 +32,8 @@ RUN pip install timm
 RUN mim install mmdet==2.25.3
 RUN pip install fairscale==0.4.13
 RUN pip install scipy==1.10.1
+RUN pip install git+https://github.com/facebookresearch/fvcore.git
+RUN pip install einops
 
 # Install etc.
 RUN pip install yapf==0.40.1
-
-WORKDIR /Co-DETR
